--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,7 @@
       href="%PUBLIC_URL%/apple-icon.png"
     />
     <!--     Fonts and icons     -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://use.typekit.net/bto1vzx.css">
     <link
       href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
       rel="stylesheet"
